# mle_decathlon

./: .dockerignore  .gitignore  README  README.md  docker-compose.yml  pyproject.toml
modules/common/: data_loader.py
modules/eda/: turnover_modeling.ipynb
modules/frontend/: Dockerfile  pyproject.toml  welcome.py
modules/inference/: Dockerfile  build.py  main.py  pyproject.toml  test.ipynb
modules/inference/dmodel/: MLmodel  model.pkl
modules/inference/src_inference/: build.py  inference.py
modules/inference/src_inference/models/: input.py
modules/inference/tests/: test_builder.py  test_inference.py
modules/model_repository/: Dockerfile
modules/model_train/configs/: traning.yml
modules/model_train/src/: training_code.py
modules/model_training/: Dockerfile  dockerfile  pyproject.toml  train.py
modules/model_training/src/: custom_transformers.py  training_code.py
modules/model_training/tests/: test_trainer.py
modules/monitoring/: Dockerfile  main.py  pyproject.toml
modules/monitoring/model_deps/: conda.yaml  requirements.txt
modules/monitoring/src/: monitor.py
modules/monitoring/src_monitor/: monitor.py
scripts/dmodel/: MLmodel  model.pkl
some_url/0/: meta.yaml
