[project]
name = "decathlon-usecase"
version = "1.0.0"
description = "forecasting usecase"
authors = [
    {name = "miguel",email = "miguelmayhem92@gmail.com"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (<2.2.0)",
    "scikit-learn (<1.8.0)",
    "xgboost (<2.0.0)",
    "numpy (==1.26.4)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "scipy (==1.10.0)",
    "streamlit (==1.48.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"