[project]
name = "decathlon-usecase"
version = "1.0.0"
description = "forecasting usecase"
authors = [
    {name = "miguel",email = "miguelmayhem92@gmail.com"}
]
requires-python = ">=3.11,<3.12"

dependencies = [
    "pandas (<2.2.0)",
    "scikit-learn (<1.8.0)",
    "xgboost (<2.0.0)",
    "numpy (==1.26.4)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "mlflow (>=3.1.0,<3.2.0)",
    "contourpy (==1.3.2)",
    "scipy (==1.10.0)",
    "greenlet (>3.2,<3.3.0)",
    "nvidia-nccl-cu12 (<2.28.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"